@@ -31,7 +31,7 @@ import edu.hcmus.doc.mainservice.security.util.SecurityUtils;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import org.apache.commons.lang3.StringUtils;
 
 public class CustomProcessingDocumentRepositoryImpl
@@ -383,7 +383,28 @@ public class CustomProcessingDocumentRepositoryImpl
         .fetch()
         .stream()
         .map(tuple -> tuple.get(processingUser.user.id))
-        .collect(Collectors.toList());
+        .toList();
+  }
+
+  @Override
+  public Optional<ProcessingDocument> findByIncomingDocumentId(Long incomingDocumentId) {
+    return Optional.ofNullable(
+        selectFrom(processingDocument)
+            .where(processingDocument.incomingDoc.id.eq(incomingDocumentId))
+            .fetchOne()
+    );
+  }
+
+  @Override
+  public Optional<ProcessingStatus> getProcessingStatus(Long documentId) {
+    String result = selectFrom(processingDocument)
+        .rightJoin(processingDocument.incomingDoc, incomingDocument)
+        .select(processingStatusCases)
+        .where(incomingDocument.id.eq(documentId))
+        .fetchOne();
+
+      return Optional.ofNullable(result)
+          .map(ProcessingStatus::valueOf);
   }
 
   @Override
